# scotpy

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  DOCS.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: implement_feature.mdc  new_feature.mdc  new_project.mdc  project_structure.mdc
.github/workflows/: ci.yml
src/python_template/: example.py
